--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,33 @@
     transform: rotate(360deg);
   }
 }
+
+/* home page css */
+.box{
+  display: flex;
+  position: absolute;
+  left: 40%;
+  top: 25%;
+}
+.input_box{
+  width: 40%;
+  background-color: white;
+  color: black;
+  border: none;
+  height: 30px;
+  box-shadow: 0px 0px 2px 5px black;
+  margin-left:3px;
+}
+.boxes{
+  text-decoration: none;
+  border: 2px solid black;
+  width: 50%;
+  height: 30px;
+  
+  
+}
+.sign{
+  height: 15%;
+  color: black;
+}
+
