--- a/src/css/Todo.css
+++ b/src/css/Todo.css
@@ -4,36 +4,46 @@
 }
 .fig,.addItems,.ShowItems{
 margin: 20px;
-margin-left: 40%;
+margin-left: 30%;
 }
-.add{
+ .add{
     position: absolute;
-    left: 57%;
-    top: 120px;
+    left: 58%;
+   margin-top: 1%;
+   border: solid 1px black;
 }
 .del{
     margin-left: 200px;
     color: red;
+    font-size: 30px;
     left: 70%;
-    margin-top: -80px
+    margin-top: -80px;
 }
 .caption{
     color: white;
 }
 .itemList{
-    border: 2px solid white;
-    padding: 3%;
+    border: 2px solid black;
+    padding: 0%;
     border-radius: 50px;
     box-shadow: 10px 10px 10px 10px lightseagreen;
+    width: 230px;
+    height: 50px;
+    margin-bottom: 20px;
 }
 .item_heading{
     color: white;
     text-align: left;
 }
 .check_btn{
-    margin: 40px;
+    margin: 0px;
     width: 40%;
-    height: 20%;
-   
-   
+    height: 0%;
+}
+.todo_list{
+    width: 50%;
+    height: auto;
+    background-color: #271669 ;
+    margin-left: 25%;
+    padding: 50px;
 }
